@@ -3,7 +3,11 @@
 	* ipy_stock_completers.py: Add %run and %cd completers.
 	
 	* completer.py: Try running custom completer for both 
-	"foo" and "%foo" if the command is just "foo".
+	"foo" and "%foo" if the command is just "foo". Ignore case
+	when filtering possible completions.
+	
+	* UserConfig/ipy_user_conf.py: install stock completers as default	
+	
 	
 2006-10-31  Ville Vainio  <vivainio@gmail.com>
 
